fix overflow

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,6 +14,7 @@ body {
   font-family: "futura-pt-bold", sans-serif;
   color: $brand;
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
